gcc/ChangeLog: 2004-08-17  Paolo Bonzini  <bonzini@gnu.org>

PR middle-end/17036
	* fold-const.c (fold): Check for integer operand when
	folding (A >> N) & 1 ? (1 << N) : 0.  Fix from Andrew
	Pinski  <pinskia@physics.uc.edu>.

gcc/testsuite/ChangeLog:
2004-08-17  Paolo Bonzini  <bonzini@gnu.org>

	* gcc.dg/pr17036-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@86112 138bc75d-0d04-0410-961f-82ee72b054a4